plugins {
    id 'java-library'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
}

version = mod_version + getGHActionVersionSuffix()
group = mod_group_id

repositories {
    mavenLocal()
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)
println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))

neoForge {
    version = project.neo_version

    accessTransformers {
        file('src/main/resources/META-INF/accesstransformer.cfg')
    }

    runs {
        client {
            client()
            devLogin = true

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        client2 {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            programArguments.addAll '--username', 'Dev2'
        }

        server {
            server()
            //programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            systemProperty 'mixin.debug.export', 'true'

            logLevel = org.slf4j.event.Level.INFO
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

repositories {

    maven {
        // ObserverLib
        name 'HellFirePvP maven'
        url 'https://maven.hellfiredev.net/'
        content {
            includeGroup "hellfirepvp.observerlib"
        }
    }

    maven {
        // JEI
        name 'ModMaven'
        url 'https://modmaven.dev/'
        content {
            includeGroup "mezz.jei"
        }
    }

    maven {
        name 'curios maven'
        url 'https://maven.theillusivec4.top/'
        content {
            includeGroup "top.theillusivec4.curios"
        }
    }

    maven {
        name 'Modrinth Maven - JADE'
        url "https://api.modrinth.com/maven"
        content {
            includeGroup "maven.modrinth"
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
    implementation "hellfirepvp.observerlib:ObserverLib:${observerlib_version}"
    implementation "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
    implementation "top.theillusivec4.curios:curios-neoforge:${curios_version}"
    implementation "maven.modrinth:jade:${jade_modrinth_version}"
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }

    repositories {
        maven {
            url = System.getenv("MVN_URL")
            credentials {
                username = System.getenv("MVN_USER")
                password = System.getenv("MVN_PASS")
            }
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

static def getGHActionVersionSuffix() {
    if (System.getenv("GITHUB_RUN_NUMBER") != null) {
        return "." + System.getenv("GITHUB_RUN_NUMBER")
    }
    return ".local"
}

tasks.register('printVersion') {
    doLast {
        println("version:" + project.version)
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

// Credits: ImmersiveEngineering / and from there: BrainStone
void minimizePNGFile(File file) {
    long size = file.length()
    exec {
        executable "optipng.exe"
        args "-q", "-o7", "-zm1-9", "-strip", "all", file
    }
    long newSize = file.length()
    if (newSize < size) {
        System.out.format("Reduced File size of %s from %d bytes to %d bytes (reduced by %.2f%%)\n",
                file, size, newSize, ((double) (size - newSize)) / ((double) size) * 100.0)
    } else {
        System.out.format("File size of %s couldn't be reduced.\n", file)
    }
}

tasks.register('optimizePng') {
    def pngPatterns = ["**/*.png"]
    doLast {
        for (dir in sourceSets.main.resources.srcDirs) {
            fileTree(dir: dir, includes: pngPatterns).each { minimizePNGFile(it) }
        }
    }
}
